--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.28"
 
 [dev-dependencies]
+thiserror = "1.0.16"
 batch_oper = "1.3.0"
 regex = "1"
 lazy_static = '1.4'
